<resources>
    <string name="app_name">MuslimsPro</string>

    <string name="compass_hands">Compass Hands</string>
    <string name="dhaka_bangladesh">Dhaka,Bangladesh</string>
    <string name="upcoming_prayer">UPCOMING PRAYER</string>
    <string name="time">05:06 PM</string>
    <string name="next_time">1 Hours and 30 Minutes</string>
    <string name="dahur">Dahur</string>
    <string name="Sunrise">Sunrise</string>
    <string name="_00_00">05:10 AM</string>
    <string name="_00_00_">05:10 PM</string>
    <string name="Sunset">Sunset</string>
    <string name="next_prayer">ওয়াক্ত শেষ হতে বাকি</string>

    <string name="fajr">ফজর</string>
    <string name="dhuhr">যোহর</string>
    <string name="asr">আছর</string>
    <string name="maghrib">মাগরিব</string>
    <string name="isha">ইশা</string>

    <string name="Hadith">Hadith</string>


    <string-array name="hijri_adjustment_options">
        <item>+2</item>
        <item>+1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>


    <string name="day" translatable="false">আজ </string>
    <string name="sat" translatable="false">শনিবার</string>
    <string name="sun" translatable="false">রবিবার</string>
    <string name="mon" translatable="false">সোমবার</string>
    <string name="tue" translatable="false">মঙ্গলবার</string>
    <string name="wed" translatable="false">বুধবার</string>
    <string name="thu" translatable="false">বৃহস্পতিবার</string>
    <string name="fri" translatable="false">শুক্রবার</string>
    <string name="april" translatable="false">এপ্রিল</string>
    <string name="boishakh" translatable="false">বৈশাখ</string>
    <string name="boishakh2" translatable="false">বৈশাখ</string>
    <string name="jaistho" translatable="false">জৈষ্ঠ্য</string>
    <string name="jaistho2" translatable="false">জৈষ্ঠ্য</string>
    <string name="ashar" translatable="false">আষাঢ়</string>
    <string name="ashar2" translatable="false">আষাঢ়</string>
    <string name="srabon" translatable="false">শ্রাবণ</string>
    <string name="srabon2" translatable="false">শ্রাবণ</string>
    <string name="vadro" translatable="false">ভাদ্র</string>
    <string name="vadro2" translatable="false">ভাদ্র</string>
    <string name="ashwin" translatable="false">আশ্বিন</string>
    <string name="ashwin2" translatable="false">আশ্বিন</string>
    <string name="kartik" translatable="false">কার্তিক</string>
    <string name="kartik2" translatable="false">কার্তিক</string>
    <string name="agun" translatable="false">অগ্রহায়ণ</string>
    <string name="agun2" translatable="false">অগ্রহায়ণ</string>
    <string name="poush" translatable="false">পৌষ</string>
    <string name="poush2" translatable="false">পৌষ</string>
    <string name="magh" translatable="false">মাঘ</string>
    <string name="magh2" translatable="false">মাঘ</string>
    <string name="falgun" translatable="false">ফাল্গুন</string>
    <string name="falgun2" translatable="false">ফাল্গুন</string>
    <string name="choitro" translatable="false">চৈত্র</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="location">Location</string>
    <string name="prayer_method">Prayer Method</string>
    <string name="SelectCaller">ক্বারী নির্বাচন করুন</string>
    <string name="al_fatihah">Al-Fatihah</string>
    <string name="select_location">Select Location</string>
    <string name="sura1_bm">আল ফাতিহা</string>


</resources>