<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linner_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/dhaka_bangladesh"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hijriLinier"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/hijri_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="১৪"
                android:fontFamily="@font/hakan"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hijri_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" রবিউল আউয়াল "
                android:fontFamily="@font/hakan"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hijri_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="১৪৪৩ হিঃ"
                android:fontFamily="@font/hakan"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/hijri_holidays_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hijriLinier"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hijri_holidays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="১২  রবিউল আউয়াল "
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_them"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hijri_holidays"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_prayer"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/upcoming_prayer_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/Asr"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/upcoming_prayer_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="05dp"
                            android:layout_marginTop="10dp"
                            android:maxLines="1"
                            android:text="00"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:maxLines="1"
                            android:text="@string/next_prayer"
                            android:textColor="@color/white"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/next_prayer_time_to_go"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/next_time"
                            android:textColor="@color/white"
                            android:textStyle="bold"

                            />


                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="2dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/current_prayer_time_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/dahur"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_baseline_wb_sunny_24" />

                            </LinearLayout>


                            <TextView
                                android:id="@+id/sunrise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/_00_00"
                                android:textColor="@color/white"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_sun_set" />

                            </LinearLayout>


                            <TextView
                                android:id="@+id/sunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/_00_00_"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <!-- Daily Hadith Layout -->
    <LinearLayout
        android:layout_below="@+id/linear_layout_1"
        android:id="@+id/allpayerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/allpayertime"
                    android:orientation="vertical"
                    android:nestedScrollingEnabled="false"
                    android:layout_weight="1"/>



        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>